	* lib/element.h lib/object.h lib/orth_conn.h lib/properties.h
	  objects/UML/generalization.c : marked more properties optional - if
	they are properly initialized - to get rid of a lot of g_warnings()
	and one step further to fix #56233
	* samples/gobj-parse.c : a simple parser to generate a class diagram
	out of GObject using headers to test the above

2008-04-12  Hans Breuer  <hans@breuer.org>

	* lib/plug-ins.c : not being able to load a plug-in is not a critical
	issue, get rid of message_error() for these. Fixes bug #402320
	On windows also use SetErrorMode() to to suppress the systems error 
	dialog. Finally we are rewriting the error reason if the plug-in file
	exists but can not be loaded.

2008-04-10  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/locale/german.nsh: Fixed typo
	* installer/win32/locale/hungarian.nsh: Added Python texts
	* installer/win32/locale/slovak.nsh: Updated Slovak installer
	translations. Patch from Ivan Masar <helix84@users.sourceforge.net>
	* installer/win32/dia.nsi: Added splash image, updates for the 
	location of some translation files

2008-04-09  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Updates for the location of some
	translation files

2008-04-08  Hans Breuer  <hans@breuer.org>

	* NEWS app/authors.h : updated

	* lib/object.c(object_copy_list) : if we can't find the object to
	to connect to ensure there is no dangling reference. Fixes bug #497070
	* lib/group.c(group_copy) : some comment
	
	* lib/font.c(dia_font_string_width) : no need to create multiple
	TextLines to calculate the length of an empty string.
	* lib/text.c(text_key_event) : no text change for modifiers

2008-04-08  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Don't use the --use-fuzzy option with msgfmt,
	updated ALL_LINGUAS
	* installer/win32/dia.nsi: Updates for Dia, GTK+ and Installer
	locale files; Hungarian and Slovak translations are again available
	in the installer
