@@ -26,3 +26,4 @@ VOID: VOID
 VOID: OBJECT
 VOID: INT
 VOID: POINTER,POINTER
+VOID: STRING, FLAGS
